6875959: CTW fails hotspot/src/share/vm/opto/reg_split.cpp:1087

To break spill ties choose bound live range over unbound to free register or one with smaller cost to spill.

Reviewed-by: never, jrose